snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.1-SNAPSHOT/maven-metadata.xml.sha512
aaa0ebc5717e54478942c081a8054340d98edd094a518ec5eb27432166f2eb33e10ec724d14984431c1757329eabc7793f24b3bda1b0d12c8542228382907d8f